# multiagent-radiology-report

./: .gitignore  README.md  pyproject.toml
agents/: clinical_context.py  image_analysis.py  orchestrator.py
api/: main.py
mlops/: ingest_medical_knowledge.py  tracking.py
pipeline/: dicom_loader.py  preprocessor.py  xai.py
ui/: app.py
